--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - "${MYSQL_PORT}:3306"
     volumes:
       - ./mysql/my.cnf:/etc/mysql/my.cnf
+      - ./mysql/data:/data
       # - ./mysql/sql:/var/sql
       # - ./mysql/lib:/var/lib
       # data folder must be empty in the begin
@@ -71,3 +72,11 @@ services:
       - ${DATA_PATH}/rabbitmq:/var/lib/rabbitmq
     depends_on:
       - php-fpm
+
+  mongo:
+      image: mongo:latest
+      container_name: mongo
+      ports:
+        - "${MONGODB_PORT}:27017"
+      volumes:
+        - ${DATA_PATH}/mongo:/data/db
