--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
 APP_PATH=../www
 
-DATA_PATH=../.docker
+DATA_PATH=../.docker-lnmprr
 
 
 HTTP_PORT=80
@@ -12,3 +12,6 @@ MYSQL_PORT=3306
 
 
 REDIS_PORT=6379
+
+
+MONGODB_PORT=27017
