--- a/php/php.ini
+++ b/php/php.ini
@@ -941,6 +941,7 @@ default_socket_timeout = 60
 
 extension=zip.so
 extension=redis.so
+;extension=swoole.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
