--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -73,4 +73,4 @@ RUN apt-get update \
     && docker-php-ext-enable swoole \
     # install composer
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer \
-    && composer config -g repo.packagist composer https://mirrors.aliyun.com/composer/
+    && composer config -g repo.packagist composer https://packagist.phpcomposer.com
