--- a/php/php.ini
+++ b/php/php.ini
@@ -660,7 +660,7 @@ request_order = "GP"
 ; Development Value: Off
 ; Production Value: Off
 ; http://php.net/register-argc-argv
-register_argc_argv = Off
+register_argc_argv = On
 
 ; When enabled, the ENV, REQUEST and SERVER variables are created when they're
 ; first used (Just In Time) instead of when the script starts. If these
@@ -668,7 +668,7 @@ register_argc_argv = Off
 ; in a performance gain. The PHP directive register_argc_argv must be disabled
 ; for this directive to have any affect.
 ; http://php.net/auto-globals-jit
-auto_globals_jit = On
+;auto_globals_jit = On
 
 ; Whether PHP will read the POST data.
 ; This option is enabled by default.
